# badi_oerlikon_attendence

./: .env.example  .gitignore  DOCUMENTATION_REORGANIZATION.md  LICENSE  QUICKSTART.md  README.md  REORGANIZATION_SUMMARY.md  docker-compose.functions.yml  fix_markdown.py  fix_markdown_advanced.py  install-azure-tools.sh  pyproject.toml  requirements.txt  test_local_function.py  test_websocket_extended.py  test_websocket_local.py
.github/workflows/: azure-deploy.yml  main_badi-oerlikon-func-01.yml
azure/: deploy.sh  main.bicep  main.tf  outputs.tf  parameters.bicepparam  terraform.tfvars  terraform.tfvars.example  variables.tf
docker/: Dockerfile.webapp
docs/: CLEANUP_COMPLETE.md  README.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_DECISION_SUMMARY.md  README.md  WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_REDESIGN.md  WEBSOCKET_SUMMARY.md  WEBSOCKET_VISUAL_GUIDE.md
docs/deployment/: AZURE_DEPLOYMENT.md  AZURE_FUNCTIONS_GUIDE.md  AZURE_INSTALLATION_SUMMARY.md  AZURE_SETUP_COMPLETE.md  AZURE_TOOLS_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_WEBSOCKET.md  GITHUB_SECRETS.md  README.md  READY_TO_DEPLOY.md
docs/migration/: CLEANUP_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_CONTAINER_TO_FUNCTIONS.md  README.md  TRANSFORMATION_SUMMARY.md
docs/technical/: CHANGES_MADE.md  DOCKER_FIX_SUMMARY.md  DOCUMENTATION_REORGANIZATION.md  FILES_CREATED.md  LOCAL_TESTING_COMPLETE.md  LOCAL_TESTING_GUIDE.md  README.md  REORGANIZATION_SUMMARY.md  TIMEOUT_CONSIDERATIONS.md  (+1 more)
scripts/: scrape_once.py  scrape_websocket.py  scraped_data.csv
src/: main.py
(+23 files in other folders)
