[tool.poetry]
name = "historical-scraper-db"
version = "0.1.0"
description = "A project for scraping historical data and storing it in a database."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
sqlalchemy = "^1.3.23"
alembic = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"